# bb-deployments

./: .bazelrc  .gitmodules  BUILD.bazel  MODULE.bazel  dummy_for_dependencies.go  go.mod
.devcontainer/: devcontainer.json
bare/: BUILD.bazel  main.go  main.py
bare/config/: common.libsonnet  runner.jsonnet  storage.jsonnet  worker.jsonnet
lib/: BUILD.bazel  bazel_runner.py  message_coordination.py  service_manager.py  socket_server.py  test_client.py  test_runner.py  workspace.py
test_project/: BUILD.bazel  greeting_test.py  sum_test.py
tests/: run_all.sh
tests/1-worker-2-sequential/: BUILD.bazel  runner.py  test_binary.py
tests/1-worker-2-sequential/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet
tests/2-worker-2-parallel/: BUILD.bazel  runner.py  test_binary.py
tests/2-worker-2-parallel/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker1.jsonnet  worker2.jsonnet
tests/cache_hit/: BUILD.bazel  runner.py  test_binary.py
tests/cache_hit/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet
tests/concurrency/: BUILD.bazel  runner.py  test_binary.py
tests/concurrency/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet
tests/deduplication/: BUILD.bazel  runner.py  test_binary.py
tests/deduplication/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet
tests/multinode-concurrency/: BUILD.bazel  runner.py  test_binary.py
tests/multinode-concurrency/config/: common.libsonnet  frontend.jsonnet  runner1.jsonnet  runner4.jsonnet  runner5.jsonnet  runner6.jsonnet  scheduler.jsonnet  storage.jsonnet  worker1.jsonnet  worker2.jsonnet  worker3.jsonnet  worker4.jsonnet  worker5.jsonnet  worker6.jsonnet  worker7.jsonnet  worker8.jsonnet
tests/multinode-count-validation/: BUILD.bazel  runner.py  test.py
tests/multinode-count-validation/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet  worker1.jsonnet  worker2.jsonnet  worker3.jsonnet  worker4.jsonnet
tests/multinode-head-of-line-blocking/: BUILD.bazel  runner.py  test_binary.py  test_binary_notify.py
tests/multinode-head-of-line-blocking/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker1.jsonnet  worker2.jsonnet
tests/multinode-scheduling/: BUILD.bazel  runner.py  test_binary.py
tests/multinode-scheduling/config/: common.libsonnet  frontend.jsonnet  runner2.jsonnet  scheduler.jsonnet  storage.jsonnet  worker1.jsonnet  worker2.jsonnet
tests/multinode-simultaneous/: BUILD.bazel  runner.py  test_binary.py
tests/multinode-simultaneous/config/: common.libsonnet  frontend.jsonnet  runner3.jsonnet  runner7.jsonnet  runner8.jsonnet  scheduler.jsonnet  storage.jsonnet  worker1.jsonnet  worker2.jsonnet  worker3.jsonnet  worker4.jsonnet  worker5.jsonnet  worker6.jsonnet  worker7.jsonnet  worker8.jsonnet
tests/no-workers-for-platform/: BUILD.bazel  runner.py  test_binary.py
tests/no-workers-for-platform/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet
tests/platform-routing/: BUILD.bazel  runner.py  test_binary.py
tests/platform-routing/config/: common.libsonnet  frontend.jsonnet  runner-arch1.jsonnet  runner-arch2.jsonnet  scheduler.jsonnet  storage.jsonnet  worker-arch1.jsonnet  worker-arch2.jsonnet
tests/single_failure_test/: BUILD.bazel  runner.py  test_binary.py
tests/single_failure_test/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet
tests/single_test/: BUILD.bazel  runner.py  test_binary.py
tests/single_test/config/: common.libsonnet  frontend.jsonnet  scheduler.jsonnet  storage.jsonnet  worker.jsonnet
tools/: test-deployment-bare.sh
