load("@buildifier_prebuilt//:rules.bzl", "buildifier")

exports_files(
    ["MODULE.bazel"],
    visibility = ["//visibility:public"],
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["-module-docstring"],
    mode = "diff",
)
