load("@aspect_rules_py//py:defs.bzl", "py_binary")

filegroup(
    name = "config",
    srcs = glob(["config/**"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "bare",
    srcs = ["main.py"],
    data = [
        ":config",
        "@com_github_buildbarn_bb_remote_execution//cmd/bb_runner",
        "@com_github_buildbarn_bb_remote_execution//cmd/bb_scheduler",
        "@com_github_buildbarn_bb_remote_execution//cmd/bb_worker",
        "@com_github_buildbarn_bb_storage//cmd/bb_storage",
    ],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "@rules_python//python/runfiles",
    ],
)
