# Minimal test project for verifying remote execution and caching.
# This is used by tools/test-deployment-bare.sh to test the bare deployment.

load("@aspect_rules_py//py:defs.bzl", "py_test")

# A simple genrule that produces output - this will run remotely.
genrule(
    name = "generate_greeting",
    outs = ["greeting.txt"],
    cmd = "echo 'Hello from remote execution!' > $@",
)

# A test that verifies the genrule output.
py_test(
    name = "greeting_test",
    srcs = ["greeting_test.py"],
    data = [":generate_greeting"],
)

# Additional genrules to simulate more build work.
genrule(
    name = "generate_numbers",
    outs = ["numbers.txt"],
    cmd = "seq 1 100 > $@",
)

genrule(
    name = "compute_sum",
    srcs = [":generate_numbers"],
    outs = ["sum.txt"],
    cmd = "awk '{s+=$$1} END {print s}' $(location :generate_numbers) > $@",
)

py_test(
    name = "sum_test",
    srcs = ["sum_test.py"],
    data = [":compute_sum"],
)

# A test suite that runs all tests.
test_suite(
    name = "all_tests",
    tests = [
        ":greeting_test",
        ":sum_test",
    ],
)
