load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "test_binary",
    srcs = ["test_binary.py"],
    deps = [
        "//lib:test_client",
    ],
)

# Two test targets that will run sequentially (worker has concurrency=1)
py_test(
    name = "test1",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
    deps = [
        "//lib:test_client",
    ],
)

py_test(
    name = "test2",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
    deps = [
        "//lib:test_client",
    ],
)

py_binary(
    name = "runner",
    srcs = ["runner.py"],
    data = glob(["config/*.jsonnet"]) + glob(["config/*.libsonnet"]),
    deps = [
        "//lib:service_manager",
        "//lib:socket_server",
        "//lib:workspace",
    ],
)
