load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "test_binary",
    srcs = ["test_binary.py"],
    deps = [
        "//lib:test_client",
    ],
)

# Two test targets that will run in parallel
py_test(
    name = "test1",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
    deps = [
        "//lib:test_client",
    ],
)

py_test(
    name = "test2",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
    deps = [
        "//lib:test_client",
    ],
)

py_test(
    name = "runner",
    tags = ["local"],
    size = "large",
    timeout = "long",
    srcs = ["runner.py"],
    data = glob(["config/*.jsonnet"]) + glob(["config/*.libsonnet"]),
    env_inherit = ["HOME"],
    deps = [
        "//lib:service_manager",
        "//lib:socket_server",
        "//lib:workspace",
    ],
)
