load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")

# Test binary that runs on Buildbarn workers
py_binary(
    name = "test_binary",
    srcs = ["test_binary.py"],
    deps = [
        "//lib:test_client",
    ],
)

# Wrapper test target for bazel test
py_test(
    name = "test",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
    deps = [
        "//lib:test_client",
    ],
)

# Test runner that orchestrates the cache hit test
py_binary(
    name = "runner",
    srcs = ["runner.py"],
    data = glob(["config/*.jsonnet"]) + glob(["config/*.libsonnet"]),
    deps = [
        "//lib:service_manager",
        "//lib:socket_server",
        "//lib:workspace",
    ],
)
