load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")

# Test binary that runs on Buildbarn workers
py_binary(
    name = "test_binary",
    srcs = ["test_binary.py"],
    deps = [
        "//lib:test_client",
    ],
)

# Wrapper test target for bazel test
py_test(
    name = "test",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
    deps = [
        "//lib:test_client",
    ],
)

# Test runner that orchestrates the cache hit test
py_test(
    name = "runner",
    tags = ["local"],
    size = "large",
    timeout = "long",
    srcs = ["runner.py"],
    data = glob(["config/*.jsonnet"]) + glob(["config/*.libsonnet"]),
    env_inherit = ["HOME"],
    deps = [
        "//lib:bazel_runner",
        "//lib:message_coordination",
        "//lib:service_manager",
        "//lib:socket_server",
        "//lib:workspace",
    ],
)
