load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")

# Test targets for multinode_count validation.
# Each test uses exec_properties to set multinode_count values.
# All tests use test.py with env var to distinguish rejection vs valid tests.

# Test: multinode_count exceeds maximum (100 > 16)
# Expected: Scheduler rejects with InvalidArgument
py_test(
    name = "test_exceeds_max",
    srcs = ["test.py"],
    main = "test.py",
    env = {"MULTINODE_COUNT_TEST_VALUE": "100"},
    exec_properties = {"multinode_count": "100"},
)

# Test: multinode_count is zero
# Expected: Scheduler rejects with InvalidArgument
py_test(
    name = "test_zero",
    srcs = ["test.py"],
    main = "test.py",
    env = {"MULTINODE_COUNT_TEST_VALUE": "0"},
    exec_properties = {"multinode_count": "0"},
)

# Test: multinode_count is negative
# Expected: Scheduler rejects with InvalidArgument
py_test(
    name = "test_negative",
    srcs = ["test.py"],
    main = "test.py",
    env = {"MULTINODE_COUNT_TEST_VALUE": "-1"},
    exec_properties = {"multinode_count": "-1"},
)

# Test: multinode_count is non-integer
# Expected: Scheduler rejects with InvalidArgument
py_test(
    name = "test_non_integer",
    srcs = ["test.py"],
    main = "test.py",
    env = {"MULTINODE_COUNT_TEST_VALUE": "invalid"},
    exec_properties = {"multinode_count": "invalid"},
)

# Test: valid multinode_count (1 - single node, should pass through)
# Expected: Test executes successfully
py_test(
    name = "test_valid_single",
    srcs = ["test.py"],
    main = "test.py",
    env = {"MULTINODE_COUNT_TEST_VALUE": "1"},
    exec_properties = {"multinode_count": "1"},
)

# Test: valid multinode_count (4 - multi-node)
# Expected: Test executes successfully
py_test(
    name = "test_valid_multi",
    srcs = ["test.py"],
    main = "test.py",
    env = {"MULTINODE_COUNT_TEST_VALUE": "4"},
    exec_properties = {"multinode_count": "4"},
)

py_binary(
    name = "runner",
    srcs = ["runner.py"],
    data = glob(["config/*.jsonnet"]) + glob(["config/*.libsonnet"]),
    deps = [
        "//lib:service_manager",
        "//lib:workspace",
    ],
)
