load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "test_binary",
    srcs = ["test_binary.py"],
)

py_test(
    name = "test",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
)

py_test(
    name = "runner",
    tags = ["local"],
    size = "large",
    timeout = "long",
    srcs = ["runner.py"],
    data = glob(["config/*.jsonnet"]) + glob(["config/*.libsonnet"]),
    env_inherit = ["HOME"],
    deps = [
        "//lib:bazel_runner",
        "//lib:service_manager",
        "//lib:test_runner",
    ],
)
