load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "test_binary",
    srcs = ["test_binary.py"],
    deps = [
        "//lib:test_client",
    ],
)

py_test(
    name = "test",
    srcs = ["test_binary.py"],
    main = "test_binary.py",
    deps = [
        "//lib:test_client",
    ],
)

py_binary(
    name = "runner",
    srcs = ["runner.py"],
    deps = [
        "//lib:service_manager",
        "//lib:socket_server",
        "//lib:workspace",
    ],
)
